; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_mach_fat.c_fatfile_getbestarch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_mach_fat.c_fatfile_getbestarch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fat_arch = type { i32 }

@CPU_ARCH_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fatfile_getbestarch(i32 %0, i32 %1, %struct.fat_arch* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.fat_arch*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.fat_arch* %2, %struct.fat_arch** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 (...) @cpu_type()
  %10 = load i32, i32* @CPU_ARCH_MASK, align 4
  %11 = load %struct.fat_arch*, %struct.fat_arch** %6, align 8
  %12 = call i32 @fatfile_getarch(i32 %7, i32 %8, i32 %9, i32 %10, %struct.fat_arch* %11)
  ret i32 %12
}

declare dso_local i32 @fatfile_getarch(i32, i32, i32, i32, %struct.fat_arch*) #1

declare dso_local i32 @cpu_type(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
